Commit final